# TLDR

./: .env-sample  .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
src/tldr/: __init__.py  api.py  cli.py  config.py
src/tldr/ai/: __init__.py  summarizer.py  tokenizer.py
src/tldr/calendar/: __init__.py  events.py
src/tldr/gmail/: __init__.py  client.py  parser.py
src/tldr/utils/: rate_limiter.py
